# rl_uniandes

./: README.md  agent_memory.ipynb  irl_apprenticeship_learning.ipynb  melting_pot.ipynb  meltingpot.ipynb  q_learning.ipynb  q_learning_cl.ipynb  q_learning_cl_tests.ipynb  q_learning_dynamic_actions.ipynb  value_function.ipynb
basics/: q_learning.ipynb
basics/tutorial/: test.ipynb
drl/: ddqn_morphin.ipynb  dqn_morphin.ipynb  pyproject.toml
drl/gridworld_env/: GridWorld.py
drl/minigrid-drl/: aggregate_ablation_results.py  minigrid_crl_runner_adapter.py  run_experiments_ablations.sh
drl/mujoco-drl/: README_metaworld_crl.md  continual_ppo.ipynb  continual_sac.ipynb  meta_world.ipynb  metaworld_crl_runner.py  metaworld_crl_runner_adapter.py  metaworld_crl_runner_lora.py  minigrid_crl_runner_adapter.py  pyproject.toml
dynamic_actions/: agent_memory.ipynb  common_harvest.ipynb  memory_act.ipynb  q_learning_dynamic_actions.ipynb
dynamic_rewards/: agent_memory.ipynb  q_learning_cl.ipynb  q_learning_cl_tests.ipynb
final/: irl_apprenticeship_learning.ipynb
memory/: agent_memory.ipynb  gridworld_code.py  memory_v2.ipynb  memory_v3.ipynb  memory_v3_exp1.ipynb  memory_v3_exp2.ipynb  memory_v4.ipynb  memory_v4_exp1.ipynb  traffic_simulation_v1.ipynb
traffic_simu/: connections.con.xml  edges.edg.xml  q_table.npy  routes.rou.xml  simulation.sumocfg  traffic_rl_advanced.py  traffic_rl_agent.py  traffic_sumo.ipynb
traffic_simu_custom/: traffic_code.py  traffic_simulation_v1.ipynb
traffic_simu_sumo/: README.md  nodes.nod.xml  simple.net.xml  tlLogic.add.xml
(+60 files in other folders)
