[project]
name = "mujoco-drl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "metaworld>=3.0.0",
    "minigrid>=3.0.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
]
